--- a/recipes/vegancinnamonrolls.html
+++ b/recipes/vegancinnamonrolls.html
@@ -5,16 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vegan Cinnamon Rolls</title>
+    <link rel="stylesheet" href="style.css">
+    <style>
+        p {
+            color: white;
+            background-color: green;
+            font-size: 18px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Vegan Cinnamon Rolls</h1>
+    <div>
+        <h1>Vegan Cinnamon Rolls</h1>
+    </div>
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F7769569.jpg&w=595&h=398&c=sc&poi=face&q=60"
     alt="Vegan Cinnamon Rolls">
-    <h2>Description</h2>
-    <p>A very simple way to enjoy a classic treat on a vegan diet!</p> 
-    <p>Approved by my non-vegan roommates, these vegan cinnamon rolls are perfect for Sunday mornings.</p> 
+    <div>
+        <h2>Description</h2>
+    </div>
+        <p>A very simple way to enjoy a classic treat on a vegan diet!</p> 
+        <p>Approved by my non-vegan roommates, these vegan cinnamon rolls are perfect for Sunday mornings.</p>
     <br>
-    <h3>Ingredients</h3>
+    <button style="background-color: orange;">I am a button :)</button>
+    <div>
+        <h3>Ingredients</h3>
+    </div>
     <ul>
         <li>3/4 cup vanilla-flavored almond milk</li>
         <li>2 tablespoons vegetable oil</li>
@@ -35,7 +50,9 @@
         <li>2 cups chopped pecans (Optional)</li>
     </ul>
     <br>
-    <h3>Steps</h3>
+    <div>
+        <h3>Steps</h3>
+    </div>
     <ol>
         <li>Preheat oven to 375 degrees F (190 degrees C). Grease a 9x13-inch glass baking pan.</li>
         <li>Heat almond milk over medium heat until frothy, about 5 minutes. 
